# CPP_Client2

./: CMakeLists.txt  CPP_Client2.sln  README.md
CPP_Client2/: CPP_Client2.vcxproj  CPP_Client2.vcxproj.filters  Client.cpp  Client.h  HeaderManager.cpp  IPacket.cpp  IPacket.h  Macros.h  OPacket.cpp  OPacket.h  PacketManager.cpp  Source.cpp  TCPConnection.cpp  TCPConnection.h  Tester.cpp  Tester.h  UDPConnection.h
cppclient/: Client.h  HeaderManager.h  PacketManager.h  Source.cpp  TCPConnection.h
src/: HeaderManager.cpp  TCPConnection.cpp  UDPConnection.cpp
